--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "node index.js",
     "build-front": "cd client | ls",
     "feedback": "node ./feedback/index.js",
-    "generate": "npm run test-local | npm run feedback"
+    "generate": "npm run test-local | npm run feedback",
+    "dev": "nodemon index.js --ignore database.json"
   },
   "keywords": [
     "NodeJS",
@@ -22,6 +23,7 @@
     "express": "4.18.2",
     "lodash.isempty": "4.4.0",
     "lowdb": "1.0.0",
+    "nodemon": "^3.1.3",
     "request": "2.88.2"
   },
   "engines": {
